--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "dependencies": {
     "@highlightjs/vue-plugin": "^2.1.0",
     "ant-design-vue": "^4.0.8",
+    "dayjs": "^1.11.10",
     "electron-squirrel-startup": "^1.0.0",
     "express": "^4.18.2",
     "highlight.js": "^11.9.0",
