--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "log-record",
   "productName": "log-record",
-  "version": "1.0.3",
+  "version": "1.0.2",
   "description": "My Electron application description",
   "main": ".vite/build/main.js",
   "scripts": {
@@ -16,6 +16,10 @@
     "name": "wutiange",
     "email": "wutiange20@qq,com"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/wutiange/log-record"
+  },
   "license": "MIT",
   "devDependencies": {
     "@electron-forge/cli": "^7.2.0",
@@ -25,6 +29,7 @@
     "@electron-forge/maker-zip": "^7.2.0",
     "@electron-forge/plugin-auto-unpack-natives": "^7.2.0",
     "@electron-forge/plugin-vite": "^7.2.0",
+    "@electron-forge/publisher-github": "^7.4.0",
     "@tsconfig/node18": "^18.2.2",
     "@types/express": "^4.17.21",
     "@types/jsdom": "^21.1.6",
@@ -41,6 +46,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^7.0.1",
     "@highlightjs/vue-plugin": "^2.1.0",
     "ant-design-vue": "^4.0.8",
     "dayjs": "^1.11.10",
