feat: 暂时先去掉ios的更新

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts,.tsx ."
+    "lint": "eslint --ext .ts,.tsx .",
+    "sign-dev-electron-app": "codesign --deep --force --verbose --sign - node_modules/electron/dist/Electron.app",
+    "postinstall": "yarn sign-dev-electron-app"
   },
   "keywords": [],
   "author": {
