--- a/package.json
+++ b/package.json
@@ -52,10 +52,10 @@
     "dayjs": "^1.11.10",
     "electron-squirrel-startup": "^1.0.0",
     "express": "^4.18.2",
-    "highlight.js": "^11.9.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.3",
     "vue-json-pretty": "^2.4.0",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue-virtual-scroller": "^2.0.0-beta.8"
   }
 }
