--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "express": "^4.18.2",
     "pinia": "^2.1.7",
     "vue": "^3.4.3",
+    "vue-i18n": "^10.0.4",
     "vue-json-pretty": "^2.4.0",
     "vue-router": "^4.2.5",
     "vue-virtual-scroller": "^2.0.0-beta.8"
