feat: 支持基于发现的连接方式，还没完全完成

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@ant-design/icons-vue": "^7.0.1",
     "@highlightjs/vue-plugin": "^2.1.0",
     "ant-design-vue": "^4.0.8",
+    "bonjour-service": "^1.2.1",
     "dayjs": "^1.11.10",
     "electron-squirrel-startup": "^1.0.0",
     "express": "^4.18.2",
