--- a/package.json
+++ b/package.json
@@ -24,15 +24,14 @@
   "devDependencies": {
     "@electron-forge/cli": "^7.2.0",
     "@electron-forge/maker-deb": "^7.2.0",
-    "@electron-forge/maker-rpm": "^7.2.0",
     "@electron-forge/maker-dmg": "^7.2.0",
+    "@electron-forge/maker-rpm": "^7.2.0",
     "@electron-forge/maker-squirrel": "^7.2.0",
     "@electron-forge/maker-zip": "^7.2.0",
     "@electron-forge/plugin-auto-unpack-natives": "^7.2.0",
     "@electron-forge/plugin-vite": "^7.2.0",
     "@electron-forge/publisher-github": "^7.4.0",
     "@tsconfig/node18": "^18.2.2",
-    "@types/express": "^4.17.21",
     "@types/jsdom": "^21.1.6",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
@@ -44,17 +43,19 @@
     "eslint-plugin-import": "^2.25.0",
     "jsdom": "^23.0.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "@types/polka": "^0.5.7"
   },
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
     "@highlightjs/vue-plugin": "^2.1.0",
     "ant-design-vue": "^4.0.8",
+    "body-parser": "^1.20.3",
     "bonjour-service": "^1.2.1",
     "dayjs": "^1.11.10",
     "electron-squirrel-startup": "^1.0.0",
-    "express": "^4.18.2",
     "pinia": "^2.1.7",
+    "polka": "^0.5.2",
     "vue": "^3.4.3",
     "vue-i18n": "^10.0.4",
     "vue-json-pretty": "^2.4.0",
