--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@electron-forge/publisher-github": "^7.4.0",
     "@tsconfig/node18": "^18.2.2",
     "@types/jsdom": "^21.1.6",
+    "@types/polka": "^0.5.7",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "@vitejs/plugin-vue": "^5.0.2",
@@ -43,8 +44,7 @@
     "eslint-plugin-import": "^2.25.0",
     "jsdom": "^23.0.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
-    "@types/polka": "^0.5.7"
+    "typescript": "^5.3.3"
   },
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
@@ -61,5 +61,6 @@
     "vue-json-pretty": "^2.4.0",
     "vue-router": "^4.2.5",
     "vue-virtual-scroller": "^2.0.0-beta.8"
-  }
+  },
+  "packageManager": "yarn@4.5.1"
 }
