build: 升级yarn和每个包

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,15 @@
 nodeLinker: node-modules
 
+npmRegistryServer: "https://registry.npmmirror.com"
+
 yarnPath: .yarn/releases/yarn-4.5.1.cjs
+
+npmScopes:
+  electron:
+    npmRegistryServer: "https://registry.npmmirror.com"
+    npmAlwaysAuth: false
+
+# electron 相关环境变量设置
+initFields:
+  electron_mirror: "https://npmmirror.com/mirrors/electron/"
+  electron_builder_binaries_mirror: "https://npmmirror.com/mirrors/electron-builder-binaries/"
