--- a/package.json
+++ b/package.json
@@ -22,29 +22,29 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@electron-forge/cli": "^7.2.0",
-    "@electron-forge/maker-deb": "^7.2.0",
-    "@electron-forge/maker-dmg": "^7.2.0",
-    "@electron-forge/maker-rpm": "^7.2.0",
-    "@electron-forge/maker-squirrel": "^7.2.0",
-    "@electron-forge/maker-zip": "^7.2.0",
-    "@electron-forge/plugin-auto-unpack-natives": "^7.2.0",
-    "@electron-forge/plugin-vite": "^7.2.0",
-    "@electron-forge/publisher-github": "^7.4.0",
-    "@tsconfig/node18": "^18.2.2",
-    "@types/jsdom": "^21.1.6",
+    "@electron-forge/cli": "^7.5.0",
+    "@electron-forge/maker-deb": "^7.5.0",
+    "@electron-forge/maker-dmg": "^7.5.0",
+    "@electron-forge/maker-rpm": "^7.5.0",
+    "@electron-forge/maker-squirrel": "^7.5.0",
+    "@electron-forge/maker-zip": "^7.5.0",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.5.0",
+    "@electron-forge/plugin-fuses": "^7.5.0",
+    "@electron-forge/plugin-vite": "^7.5.0",
+    "@electron-forge/publisher-github": "^7.5.0",
+    "@electron/fuses": "^1.8.0",
+    "@types/node": "^22.9.0",
     "@types/polka": "^0.5.7",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
-    "@vitejs/plugin-vue": "^5.0.2",
-    "@vitejs/plugin-vue-jsx": "^3.1.0",
-    "@vue/tsconfig": "^0.5.1",
-    "electron": "28.1.0",
+    "@vitejs/plugin-vue": "^5.2.0",
+    "@vitejs/plugin-vue-jsx": "^4.1.0",
+    "electron": "^33.2.0",
     "eslint": "^8.0.1",
     "eslint-plugin-import": "^2.25.0",
-    "jsdom": "^23.0.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "ts-node": "^10.0.0",
+    "typescript": "~4.5.4",
+    "vite": "^5.0.12"
   },
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
@@ -54,6 +54,7 @@
     "bonjour-service": "^1.2.1",
     "dayjs": "^1.11.10",
     "electron-squirrel-startup": "^1.0.0",
+    "highlight.js": "^11.10.0",
     "pinia": "^2.1.7",
     "polka": "^0.5.2",
     "vue": "^3.4.3",
