--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@electron-forge/plugin-vite": "^7.5.0",
     "@electron-forge/publisher-github": "^7.5.0",
     "@electron/fuses": "^1.8.0",
+    "@types/electron-squirrel-startup": "^1.0.2",
     "@types/node": "^22.9.0",
     "@types/polka": "^0.5.7",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -53,7 +54,7 @@
     "body-parser": "^1.20.3",
     "bonjour-service": "^1.2.1",
     "dayjs": "^1.11.10",
-    "electron-squirrel-startup": "^1.0.0",
+    "electron-squirrel-startup": "^1.0.1",
     "highlight.js": "^11.10.0",
     "pinia": "^2.1.7",
     "polka": "^0.5.2",
