fix: 优化网络卡顿的问题

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@electron-forge/publisher-github": "^7.5.0",
     "@electron/fuses": "^1.8.0",
     "@types/electron-squirrel-startup": "^1.0.2",
+    "@types/lodash": "^4.17.13",
     "@types/node": "^22.9.0",
     "@types/polka": "^0.5.7",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -56,6 +57,7 @@
     "dayjs": "^1.11.10",
     "electron-squirrel-startup": "^1.0.1",
     "highlight.js": "^11.10.0",
+    "lodash": "^4.17.21",
     "pinia": "^2.1.7",
     "polka": "^0.5.2",
     "vue": "^3.4.3",
