--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "electron": "^33.2.0",
     "eslint": "^8.0.1",
     "eslint-plugin-import": "^2.25.0",
+    "prettier": "^3.4.2",
     "ts-node": "^10.0.0",
     "typescript": "~4.5.4",
     "vite": "^5.0.12"
