--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@vitejs/plugin-vue-jsx": "^4.1.0",
     "electron": "^33.2.0",
     "eslint": "^8.0.1",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.25.0",
     "prettier": "^3.4.2",
     "ts-node": "^10.0.0",
