--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "prettier": "^3.4.2",
     "ts-node": "^10.0.0",
     "typescript": "~4.5.4",
-    "vite": "^5.0.12"
+    "vite": "^5.0.12",
+    "vite-plugin-static-copy": "^3.0.0"
   },
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
